--- a/Bifurcation_Analysis.ipynb
+++ b/Bifurcation_Analysis.ipynb
@@ -176,7 +176,7 @@
           "height": 621
         },
         "id": "pPwLIsBS8My9",
-        "outputId": "f590bfa7-e49b-418f-f7a8-c21a915e2ef3"
+        "outputId": "8a75d5e3-6a85-4a36-9884-5938744d5e59"
       },
       "source": [
         "### Test-run of the model, with the above parameters\n",
@@ -249,6 +249,29 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jTHTkdMez3x2",
+        "outputId": "92649416-ec36-4e23-876c-5a6dc0321f29"
+      },
+      "source": [
+        "print(np.shape(V))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(10000, 4)\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
